force-app/main/default/objects/AR_Operating_Unit__c/fields/EBS_Ledger_Id__c.field-meta.xml
<CustomField>
    <fullName>EBS_Ledger_Id__c</fullName>
    <description>This field stores the Oracle EBS Id</description>
    <label>EBS Ledger Id</label>
    <length>20</length>
    <type>Text</type>
</CustomField>