force-app/main/default/objects/AR_Operating_Unit__c/fields/Ledger_ID__c.field-meta.xml
<CustomField>
    <fullName>Ledger_ID__c</fullName>
    <label>Ledger ID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>