force-app/main/default/objects/AR_Operating_Unit__c/fields/Ledger_Name__c.field-meta.xml
<CustomField>
    <fullName>Ledger_Name__c</fullName>
    <label>Ledger Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>