force-app/main/default/objects/AR_Operating_Unit__c/fields/Letter_Head_Classification__c.field-meta.xml
<CustomField>
    <fullName>Letter_Head_Classification__c</fullName>
    <label>Letter Head Classification</label>
    <length>50</length>
    <type>Text</type>
</CustomField>