force-app/main/default/objects/AR_Operating_Unit__c/fields/Letter_Head_Footer__c.field-meta.xml
<CustomField>
    <fullName>Letter_Head_Footer__c</fullName>
    <label>Letter Head Footer</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>